refactor(tolist) : simplified code using toList
replace collect(Collectors.toList()) into toList()